--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -2,17 +2,18 @@
 	flex 0 1 97.5%
 	{$flex-col}
 	overflow-y auto
+	height 100%
 	align-items flex-start
-	// justify-content center
+	justify-content space-around
 
 .create-timer-heading
 	align-self center
 	text-align center
-	flex 0 1 8%
+	flex 1
 
 .create-timer-form
 	color $white
-	flex 0 1 90%
+	flex 0 1 100%
 	{$flex-row-wrap}
 	justify-content space-around
 	align-self flex-start
