--- a/src/css/_footer.styl
+++ b/src/css/_footer.styl
@@ -22,9 +22,9 @@
 		color $white
 		text-decoration none
 		background-color $black3
-	height 5vh
+	height $footer-height
 	@media all and (orientation landscape)
-		height 6.5vh
+		height $footer-height-landscape
 
 
 .footer-image
