--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -94,6 +94,7 @@
 	background-color transparent
 	position absolute
 	right 5px
-	bottom 5px
-	font-size 1rem
+	bottom 2.5px
+	font-weight bold
+	font-size 1.5rem
 	color $red
