--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -1,5 +1,6 @@
-// .app-profile
-// 	{$flex-col}
+.app-profile
+	max-height 100%
+	overflow-y auto
 
 .app-profile__edit,
 .app-profile__static
@@ -25,7 +26,7 @@
 	color $white
 	align-items center
 	& > p
-		padding 2vmin
+		padding 3vmin
 		font-size 1.15rem
 		flex 0 1 100%
 		background-color $black1
@@ -43,10 +44,11 @@
 	align-items center
 	margin 5px 0
 
-.profile-edit-button
+.profile-edit-button,
+.profile-save-button
 	flex 0 1 75%
 	{$button}
-	padding 0
+	padding 5px
 	margin-top 15px !important
 	&:active,
 	&:focus
@@ -64,14 +66,14 @@
 	{$input}
 	height 6vmax !important
 
-.profile-save-button
-	flex 0 1 75%
-	{$button}
-	margin-top 10px
-	&:active,
-	&:focus
-		outline none !important
-		box-shadow 0px 0px 1px 1px $white
+// .profile-save-button
+// 	flex 0 1 75%
+// 	{$button}
+// 	margin-top 10px
+// 	&:active,
+// 	&:focus
+// 		outline none !important
+// 		box-shadow 0px 0px 1px 1px $white
 
 .visibility-toggle
 	flex 0 1 65%
