--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -11,6 +11,7 @@
 	justify-content space-around
 	align-items center
 	color $black4
+	margin 5px
 
 .settings-label
 	font-size 1.5rem
@@ -24,10 +25,9 @@
 
 .settings-heading
 	width 90%
-	margin-bottom 25px
 	color $white
 	text-align center
 	line-height 2.5rem
-	margin-top 5vh !important
+	margin 5vh 0 !important
 	// & > span
 	// 	color $pink
