--- a/src/css/_variables.styl
+++ b/src/css/_variables.styl
@@ -3,6 +3,8 @@ $content = 'Open Sans'
 
 $header-height = 4vh
 $header-height-landscape = 5vh
+$footer-height = 6.5vh
+$footer-height-landscape = 8vh
 
 $flex-center-everything =
 	display flex
