--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -1,12 +1,11 @@
 .app-login
-	{$flex-col-wrap}
+	height 100%
+	{$flex-col}
 	align-items center
-	justify-content space-around
-	@media all and (orientation portrait)
-		margin-top 15vh
+	justify-content center
 	
 .login-title
-	flex 1
+	flex none
 	line-height 6rem !important
 	text-align center
 	font-size 6rem !important
