--- a/src/css/style.css
+++ b/src/css/style.css
@@ -751,6 +751,7 @@
   color: #22633e;
 }
 .app-login {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -758,23 +759,17 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-@media all and (orientation: portrait) {
-  .app-login {
-    margin-top: 15vh;
-  }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .login-title {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
   line-height: 6rem !important;
   text-align: center;
   font-size: 6rem !important;
