--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -6,7 +6,7 @@
 	
 .settings-div
 	width 100%
-	flex 0.25 1
+	flex none
 	{$flex-row-wrap}
 	justify-content space-around
 	align-items center
@@ -24,7 +24,7 @@
 	flex 0.5 1 50%
 
 .settings-heading
-	width 90%
+	width 75%
 	color $white
 	text-align center
 	line-height 2.5rem
