--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,10 +5,11 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -19,8 +20,8 @@
       align-self: center;
   text-align: center;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1;
-          flex: 0 1;
+      -ms-flex: 0 1 75%;
+          flex: 0 1 75%;
   margin: 2vmin 0 !important;
 }
 .app-completed-timers__none-heading-div {
@@ -59,7 +60,9 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 100%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
   overflow-y: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -751,7 +754,7 @@
   color: #22633e;
 }
 .app-login {
-  height: 100%;
+  height: 100% !important;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1524,9 +1527,9 @@
 }
 .settings-div {
   width: 100%;
-  -webkit-box-flex: 0.25;
-      -ms-flex: 0.25 1;
-          flex: 0.25 1;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1576,7 +1579,7 @@
   color: #282828;
 }
 .settings-heading {
-  width: 90%;
+  width: 75%;
   color: #dbcdc9;
   text-align: center;
   line-height: 2.5rem;
