--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -4,7 +4,7 @@
 	// {$flex-row-wrap}
 	flex 0 1 97.5%
 	color $white
-	overflow hidden
+	// overflow hidden
 	justify-content flex-start
 	max-height 100%
 
@@ -45,7 +45,8 @@
 		// margin 10px 0 !important
 
 .saved-timers__ul
-	flex 0 1 100%
+	// flex 0 1 100%
+	// flex none
 	list-style none
 	margin 0
 	padding 0
