time for a break

--- a/src/css/_completedTimers.styl
+++ b/src/css/_completedTimers.styl
@@ -13,6 +13,7 @@
 	margin 2vmin 0 !important
 
 .app-completed-timers__none-heading-div
+	height 100%
 	flex 1 1 100%
 	{$flex-col}
 	justify-content center
