--- a/src/css/_home.styl
+++ b/src/css/_home.styl
@@ -71,7 +71,15 @@
 	color $blue
 	font-size 1.5rem
 	margin-bottom 3vmin	
+
+.home__favorite-timers-timer-text
+	color $black4
+	font-size 1.35rem
 	
+.home__favorite-timers-timer-name-link
+	color $white
+	border-bottom 1px dotted $white
+
 .home__recent-timers-info
 	flex 0 30%
 	align-self flex-start
