--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -123,3 +123,21 @@
 	font-weight bold
 	font-size 1.5rem
 	color $green
+
+.saved-timers__no-timers
+	margin-top 25px
+	{$flex-row-wrap}
+	background-color $black1
+	flex 0 1 100%
+	padding 50px
+	& > *
+		text-align center
+		justify-content center
+		flex 0 1 100%
+	& > h1
+		color $red
+		margin-bottom 15px
+	& > a
+		font-size 1.5rem
+		text-decoration underline
+		color $blue !important
