--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -2,8 +2,8 @@
 	flex 0 1 97.5%
 	{$flex-col}
 	overflow-y auto
-	height 100%
-	align-items flex-start
+	height 95%
+	align-items center
 	justify-content space-around
 
 .create-timer-heading
