--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -47,8 +47,8 @@ body {
 	margin 0
 	padding 0
 	font-family $content
-	overflow-scrolling: touch
-	// overflow hidden
+	overflow-scrolling touch
+	-webkit-overflow-scrolling touch
 }
 
 h1
