couple styling things...

--- a/src/css/_runTimer.styl
+++ b/src/css/_runTimer.styl
@@ -31,7 +31,7 @@
 	& > li
 		padding 2.5px
 		font-size 1.25rem
-		flex 0 1 30%
+		flex 0.25 1 20%
 		background-color $black2
 		margin 5px 0
 		{$flex-row-wrap}
@@ -59,8 +59,8 @@
 
 .run-timer__timer-circle
 	flex 0 1 40%
-	height 50%
-	// max-width 80%
+	height 40%
+	margin 2px 0
 	border 5px solid $white
 	border-radius 50%
 	@media all and (orientation landscape)
