--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,10 +219,10 @@
       -ms-flex-direction: column;
           flex-direction: column;
   overflow-y: auto;
-  height: 100%;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  height: 95%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
@@ -1168,9 +1168,9 @@
 .run-timer__timer-totals-ul > li {
   padding: 2.5px;
   font-size: 1.25rem;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 30%;
-          flex: 0 1 30%;
+  -webkit-box-flex: 0.25;
+      -ms-flex: 0.25 1 20%;
+          flex: 0.25 1 20%;
   background-color: #282828;
   margin: 5px 0;
   display: -webkit-box;
@@ -1223,7 +1223,8 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 1 40%;
           flex: 0 1 40%;
-  height: 50%;
+  height: 40%;
+  margin: 2px 0;
   border: 5px solid #dbcdc9;
   border-radius: 50%;
 }
@@ -1683,6 +1684,7 @@ body {
   padding: 0;
   font-family: 'Open Sans';
   overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
 h1 {
   font-size: 2rem !important;
