Last bit of work... many features to be added but its time to learn other things

--- a/src/css/_savedTimers.styl
+++ b/src/css/_savedTimers.styl
@@ -27,6 +27,7 @@
 	padding 1.5vh !important
 	margin 10px !important
 	@media all and (orientation landscape)
+		height 4vmax !important
 		flex 0 1 20%
 	&:focus
 		margin 10px !important
@@ -114,9 +115,9 @@
 	padding 1px
 	background-color transparent
 	position absolute
-	right 5px
-	bottom 5px
-	font-size 1.5rem
+	right 0
+	bottom 0
+	font-size 2rem
 	color $red
 
 .saved-timers__info-totalTime
