--- a/src/css/_home.styl
+++ b/src/css/_home.styl
@@ -36,7 +36,6 @@
 	// 	text-align center
 .home__recent-timers-ul,
 .home__favorite-timers-ul
-	position relative
 	flex 1
 	width 100%
 	margin 0
@@ -48,6 +47,7 @@
 
 .home__recent-timers-li,
 .home__favorite-timers-li
+	position relative
 	flex 0 1 100%
 	color $white
 	margin 2vmin 0
@@ -88,9 +88,9 @@
 	padding 1px
 	background-color transparent
 	position absolute
-	right 5px
-	bottom 5px
-	font-size 1.5rem
+	right 0
+	bottom 0
+	font-size 2rem
 	color $red
 
 .home__recent-timers-info-totalTime
