--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -92,8 +92,8 @@
 	padding 1px
 	background-color transparent
 	position absolute
-	right 5px
-	bottom 2.5px
+	right 0
+	bottom 0
 	font-weight bold
-	font-size 1.5rem
+	font-size 2rem
 	color $red
