--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -1,11 +1,12 @@
 .app-profile
-	max-height 100%
+	height 100%
 	overflow-y auto
+	display flex
+	align-items center
 
 .app-profile__edit,
 .app-profile__static
-	// height 100%
-	flex 0 1 100%
+	max-height 90%
 	{$flex-row-wrap}
 	justify-content center
 	align-items space-around
