--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,7 +219,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   overflow-y: auto;
-  height: 95%;
+  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -308,7 +308,6 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 1 100%;
           flex: 0 1 100%;
-  margin: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -365,10 +364,11 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
-  font-size: 1rem;
+  font-size: 1.25rem;
   color: #ab8b82;
 }
 .rest-increment-explanation-overlay {
+  overflow-y: auto !important;
   position: fixed;
   top: 0;
   left: 0;
@@ -376,14 +376,26 @@
   z-index: 1000;
   width: 100vw;
   background-color: rgba(112,112,112,0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .rest-increment-explanation {
-  position: fixed;
-  left: 10%;
-  right: 10%;
-  top: 15vh;
-  padding: 15px;
-  margin: 0 auto;
+  overflow-y: auto;
+  padding: 5px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 80%;
+          flex: 0 1 80%;
+  max-height: 65%;
+  position: relative;
   background-color: #282828;
   border: 3px solid #b7402c;
   display: -webkit-box;
@@ -399,6 +411,13 @@
           justify-content: center;
   z-index: 1001;
   opacity: 1 !important;
+}
+.rest-increment-explanation h2 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
+  text-align: center;
+  margin-bottom: 10px;
 }
 .rest-increment-explanation > * {
   -webkit-box-flex: 0;
@@ -423,23 +442,18 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: cebnter;
-      -ms-flex-pack: cebnter;
-          justify-content: cebnter;
-}
-.rest-increment-explanation-example > h2 {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 100%;
-          flex: 0 1 100%;
-  text-align: center;
-  margin-bottom: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .close-explanation {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 20%;
           flex: 0 1 20%;
   padding: 2.5px;
-  border: 1px solid #dbcdc9 !important;
+  margin: 5px 0;
+  border: 1px solid #b7402c !important;
+  color: #b7402c;
   text-align: center !important;
 }
 .error-page {
@@ -924,14 +938,18 @@
   color: #b7402c;
 }
 .app-profile {
-  max-height: 100%;
+  height: 100%;
   overflow-y: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .app-profile__edit,
 .app-profile__static {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 100%;
-          flex: 0 1 100%;
+  max-height: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1560,9 +1578,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  overflow-y: auto;
+}
+@media all and (orientation: portrait) {
+  .app-settings {
+    height: 90%;
+  }
 }
 .settings-div {
   width: 100%;
@@ -1580,7 +1603,11 @@
       -ms-flex-align: center;
           align-items: center;
   color: #a5a5a5;
-  margin: 5px;
+}
+@media all and (orientation: landscape) {
+  .settings-div {
+    margin: 5px;
+  }
 }
 .settings-label {
   font-size: 1.5rem;
@@ -1618,11 +1645,14 @@
   color: #282828;
 }
 .settings-heading {
-  width: 75%;
+  width: 90%;
   color: #dbcdc9;
   text-align: center;
   line-height: 2.5rem;
   margin: 5vh 0 !important;
+}
+.settings-heading > span {
+  color: #ab8b82;
 }
 @import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
 @media all and (max-width: 1024px) {
