--- a/src/css/style.css
+++ b/src/css/style.css
@@ -938,18 +938,16 @@
   color: #b7402c;
 }
 .app-profile {
-  height: 100%;
   overflow-y: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 .app-profile__edit,
 .app-profile__static {
-  max-height: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -962,7 +960,7 @@
       -ms-flex-align: space-around;
           align-items: space-around;
   overflow-y: auto;
-  padding: 10px 0;
+  margin: 15px 0;
 }
 .profile-photo {
   -webkit-box-flex: 0;
@@ -1069,16 +1067,23 @@
 }
 .profile-label {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 25%;
-          flex: 0 1 25%;
+      -ms-flex: 0 1 35%;
+          flex: 0 1 35%;
   font-size: 1rem;
   text-align: right;
   color: #a5a5a5;
 }
+@media all and (orientation: landscape) {
+  .profile-label {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 25%;
+            flex: 0 1 25%;
+  }
+}
 .profile-input {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 65%;
-          flex: 0 1 65%;
+      -ms-flex: 0 1 55%;
+          flex: 0 1 55%;
   height: 6vmax !important;
   border-radius: 2px !important;
   border: 1px solid #dbcdc9 !important;
@@ -1103,10 +1108,17 @@
   background-color: #fff;
   color: #282828;
 }
+@media all and (orientation: landscape) {
+  .profile-input {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 65%;
+            flex: 0 1 65%;
+  }
+}
 .visibility-toggle {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 65%;
-          flex: 0 1 65%;
+      -ms-flex: 0 1 55%;
+          flex: 0 1 55%;
   padding: 6px;
   border-radius: 2px;
   display: -webkit-box;
@@ -1119,6 +1131,13 @@
       -ms-flex-pack: center;
           justify-content: center;
   transition: 0.5s all;
+}
+@media all and (orientation: landscape) {
+  .visibility-toggle {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 65%;
+            flex: 0 1 65%;
+  }
 }
 .app-run-timer {
   display: -webkit-box;
