--- a/src/css/style.css
+++ b/src/css/style.css
@@ -777,6 +777,27 @@
   border: 1px solid #22633e;
   color: #22633e;
 }
+.logging-in {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.logging-in > h1 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 95%;
+          flex: 0 1 95%;
+  text-align: center;
+  font-size: 4rem;
+}
 .app-login {
   height: 100% !important;
   display: -webkit-box;
