--- a/src/css/_calendar.styl
+++ b/src/css/_calendar.styl
@@ -1,6 +1,6 @@
 .calendar
 	width 100vw
-	max-height 100%
+	height 100%
 	align-self center
 	{$flex-row-wrap}
 	align-items center
@@ -65,6 +65,7 @@
 
 .calendar__details
 	flex 0 1 90%
+	max-height 100%
 	{$flex-center-everything}
 	margin-bottom 15px
 	
@@ -83,6 +84,7 @@
 	justify-content space-around
 	text-align center
 	align-self flex-start
+	transition 0.5s all
 	& > h3
 		flex 0 1 100%
 		color $blue
