--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 .calendar {
   width: 100vw;
-  max-height: 100%;
+  height: 100%;
   -ms-flex-item-align: center;
       align-self: center;
   display: -webkit-box;
@@ -144,6 +144,7 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 1 90%;
           flex: 0 1 90%;
+  max-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -180,6 +181,7 @@
   text-align: center;
   -ms-flex-item-align: start;
       align-self: flex-start;
+  transition: 0.5s all;
 }
 .calendar__day-details-item > h3 {
   -webkit-box-flex: 0;
