changed time formats...

--- a/src/css/_createTimer.styl
+++ b/src/css/_createTimer.styl
@@ -38,10 +38,11 @@
 .create-timer-input
 	flex 0 1 55%
 	{$input}
-	margin 0 !important
+	margin 5px 0 !important
+	height 4vmax !important
 
 .create-timer-form-section
-	flex 0 1 100%
+	flex 0 1 95%
 	{$flex-row-wrap}
 	justify-content space-around
 	align-items center
