the final commit... for now

--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -4,8 +4,6 @@
 		height 90%
 	width 97.5%
 	align-items center
-	justify-content space-around
-	overflow-y auto
 	
 .settings-div
 	width 100%
@@ -14,6 +12,7 @@
 	justify-content space-around
 	align-items center
 	color $black4
+	margin 5px
 	@media all and (orientation landscape)
 		margin 5px
 
