--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1841,9 +1841,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  overflow-y: auto;
 }
 @media all and (orientation: portrait) {
   .app-settings {
@@ -1866,6 +1863,7 @@
       -ms-flex-align: center;
           align-items: center;
   color: #a5a5a5;
+  margin: 5px;
 }
 @media all and (orientation: landscape) {
   .settings-div {
