FINAL build (calendar tweak)

--- a/src/css/_calendar.styl
+++ b/src/css/_calendar.styl
@@ -23,15 +23,6 @@
 		flex 0 1 40%
 		text-align center
 		margin 10px
-		
-.calendar__month-selector
-	flex 0 1 35%
-	background-color transparent
-	{$input}
-	border 2px solid $white !important
-	font-size 1.5rem !important
-	text-align center
-
 
 .month-obj
 	flex 0 1 97.5%
@@ -105,3 +96,7 @@
 			
 .calendar__help-text
 	margin-top 15px
+
+.calendar__arrow
+	color $white
+	font-size 1.5rem
