final styling add for the day. runtimer is still weird on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1811,6 +1811,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 97.5%;
+  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
